fix some UI funkiness coming from jQuery (missing images and tab wrapping)

--- a/app/assets/stylesheets/cypress/_layout.scss
+++ b/app/assets/stylesheets/cypress/_layout.scss
@@ -108,7 +108,7 @@ h5.ui-widget-title {
 /* vertical tabs */
 // .ui-tabs-vertical { width: 55em; }
 .ui-tabs-vertical .ui-tabs-nav { padding: .2em .1em .2em .2em; float: left; width: 16em; }
-.ui-tabs-vertical .ui-tabs-nav li { clear: left; width: 100%; border-bottom-width: 1px !important; border-right-width: 0 !important; margin: 0 -1px .2em 0; }
+.ui-tabs-vertical .ui-tabs-nav li { clear: left; width: 100%; border-bottom-width: 1px !important; border-right-width: 0 !important; margin: 0 -1px .2em 0; white-space: normal; }
 .ui-tabs-vertical .ui-tabs-nav li a { display:block; width:210px;padding-right:0.5em}
 .ui-tabs-vertical .ui-tabs-nav li.ui-tabs-selected { padding-bottom: 0; padding-right: .1em; border-right-width: 1px; border-right-width: 1px; }
 //.ui-tabs-vertical .ui-tabs-panel { padding: .5em; float: right; width: 52em;}
